# gl_study

./: '  .gitignore  CMakeLists.txt  README.md
asset/: cookie1.mtl
glfw_src/: main.cpp
glfw_src/include/: Material.h  Object.h  Shape.h  ShapeIndex.h
include/: Matrix.h  Mesh.h  Model.h  Object.h  Shape.h  SolidShape.h  SolidShapeIndex.h  Uniform.h  Vector.h  Window.h
src/: main.cpp  point.frag  point.vert
window_test/: main.cpp  sample
